Fix overflow issues on the page & on cards
Explanations:
- The whole dashboard should fit into 100vh (since I want to) so there
is no scrolling.
- Decreased the font size at the root. Since all text used rem unit,
this decreased text size on the whole page, helping prevent text
overflowing their divs.
- Narrow the sidebar to allow more room for main content section
- Decrease the amount of placeholder text on the project cards
- The h2 header size in the main content section is now responsive to
the root font size.
- Scrollbars were added to cards to enable reading on large zooms.

--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ p {
 
 /* Main styling starts here ================================================= */
 html {
+  font-size: 14px;
   
   --palette-dominant: hsl(23, 41%, 33%);
   --palette-dominant-dark: hsl(22, 61%, 31%);
@@ -55,7 +56,8 @@ html {
   --palette-transparent-white: rgba(255, 255, 255, 0.6);
 
   --first-row-height: 60px;
-  --sidebar-width: 250px;
+  --second-row-height: calc(1.25 * var(--first-row-height));
+  --sidebar-width: 225px;
   --sidebar-pad-size: 15px;
   --header-btn-width: 90px;
   --main-content-gap-size: 15px;
@@ -215,8 +217,8 @@ input[type="search"]:focus {
 }
 
 .header-second-row {
-  height: calc(1.25 * var(--first-row-height));
-  grid-template-rows: calc(1.25 * var(--first-row-height));
+  height: var(--second-row-height);
+  grid-template-rows: 1fr;
   grid-template-columns: 2fr 1fr;
   align-items: center;
 }
@@ -276,8 +278,11 @@ input[type="search"]:focus {
   z-index: 1;
   grid-area: main-content;
 
+  max-height: calc(
+    100vh - var(--first-row-height) - var(--second-row-height) - 15px * 2
+  );
   display: grid;
-  grid-template-rows: repeat(2, 28px 1fr); 
+  grid-template-rows: repeat(2, 1.25rem 1fr); 
   grid-template-columns: 4fr 1fr;
   grid-template-areas: 
     "projects-header  announcements-header" 
@@ -325,8 +330,8 @@ input[type="search"]:focus {
 
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-  grid-auto-rows: minmax(200px, 1fr); /* Ensure all cards have same height */
-  gap: 20px;
+  grid-auto-rows: minmax(30%, 400px); 
+  gap: var(--main-content-gap-size);
 }
 
 .project-card {
@@ -337,16 +342,9 @@ input[type="search"]:focus {
   padding: var(--main-content-pad-size);
   border-left: var(--content-card-border-radius) solid var(--palette-accent);
   position: relative;
-}
 
-/* .project-card::before {
-  content: "hi";
-  position: absolute;
-  display: inline-block;
-  height: 100%;
-  width: calc(var(--main-content-pad-size) / 2);
-  background-color: var(--palette-accent);
-} */
+  overflow: auto;
+}
 
 .project-card h3 {
   font-size: 1rem; /* Default is 1.17em */
@@ -413,10 +411,10 @@ input[type="search"]:focus {
   in Trending */
   display: flex; 
   flex-direction: column;
-  gap: var(--main-content-gap-size);
   padding: var(--main-content-gap-size);
 
   font-size: 0.9rem;
+  overflow: auto;
 }
 
 .trending h3 {
